# advent-of-code

./: .gitmodules  README.md
2020/python/day01/: part1.py  test2.py
2020/python/day02/: test1.py
2020/python/day03/: part1.py  test_common.py
2020/python/day05/: part2.py  random_tests1.py
2020/python/day06/: part2.py
2020/python/day07/: part1_refactor.py  part2.py
2020/python/day09/: part2.py
2020/python/day1/: test1.py
2020/python/day10/: part1.py  part2.py
2020/python/day14/: part1.py
2020/python/day2/: test2.py  test_common.py
2020/python/day3/: test1.py
2020/python/day4/: part1.py
2020/python/day5/: test1.py
2020/python/day6/: part1.py
2020/rust/: Cargo.toml  sol.py  test.hs
2020/rust/benches/: example.rs
2020/rust/src/: day1.rs  day11.rs  day11_faster.rs  day12.rs  day13.rs  day14.rs  day15.rs  day2.rs  day3.rs  day7.rs  day8.rs  lib.rs  main.rs
2021/: .gitignore
2021/c/: day16.c
2021/cpp/: day1.cpp  day10.cpp  day11.cpp  day13.cpp  day2.cpp  day5.cpp  day6.cpp  util.h
2021/golang/: day10.go  day6.go
2021/haskell/: day1.hs  day10.hs  day2.hs  day3.hs  day4.hs  day7.hs  day8.hs
2021/python/: day1.py  day11.py  day12.py  day15.py  day2.py  day8.py  day9.py
2021/rust/: day1.rs  day10.rs  day2.rs  day7.rs
2022/: c  day1.py  day2.py  day3.go  day3.py  day4.py  day5.py  day8.go  day8.py
python/day1/: part2.py
python/day2/: part1.py  part2.py
python/day3/: part2.py  test2.py
python/day4/: part2.py  test1.py  test2.py
python/day5/: part1.py  test_utils.py
rust/: Cargo.toml
rust/src/: day4.rs  day8.rs  main.rs
(+10 files in other folders)
