[package]
name = "aoc-rust"
version = "0.1.0"
authors = ["Cyber Gsus <cyber.gsuscode@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.4.2"
queues = "1.1.0"
itertools = "0.9.0"
lexical = "5.2.0"

[dev-dependencies]
criterion = "0.3"


[[bench]]
name = "example"
harness = false